# PolyClaw-Agentic

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.worker  LICENSE  Makefile  PLAN-V2.md  PLAN.md  README.md  docker-compose.yml  package-lock.json  paper_trading.db-shm  paper_trading.db-wal  pyproject.toml  requirements.txt  run_arena.py  run_selector.py  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
api/: index.py
data/: agent_config.json  external_signals.sample.json  live_selection_output.json  live_selection_output_1200.json  live_selection_output_1200_alpha.json  live_selection_output_1200_alpha_safe.json  live_selection_output_1200_posedge.json  live_selection_output_1500.json  live_selection_output_1500_guardrails.json  live_selection_output_2000_5each.json  live_selection_output_3000.json  live_selection_output_5000.json  live_selection_output_6000.json  live_selection_output_external_1200.json  live_selection_output_external_required.json  sample_markets.json  selection_output.json  selection_output_external_sample.json
docs/: DemoDay-slide.pptx  HW10-deck.pptx  POLYCLAW_V2_ROADMAP.md  aditya-runbook.md  api.md  architecture.md  audit.md  backtesting.md  build_demoday_slide.py  build_hw10_deck.py  demoday-video-script.md  launch-posts.md  legacy-arena-history.json  open-claw-pattern.md  release-checklist.md  risk.md  scaling-roadmap.md  security.md  token-economics.md  whitepaper.md
docs/mcp/: claude_desktop.json  cursor.json
examples/: momentum_research_agent.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/docs/: api-contract.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthScreen.tsx  ConfirmationModal.tsx  InteractiveChart.tsx  KpiCard.tsx  KpiCardEnhanced.tsx  Panel.tsx  Sparkline.tsx  StatusPill.tsx
frontend/src/hooks/: usePrototypeDashboard.ts
frontend/src/lib/: demoData.ts  demoMode.ts  format.ts  mockData.ts  types.ts
frontend/src/pages/: AgentArenaPage.tsx  AgentDetailPage.tsx  ApprovalsPage.tsx  BacktestPage.tsx  DashboardPage.tsx  DocsPage.tsx  ExperimentsPage.tsx  LeaderboardPage.tsx  OperationsPage.tsx  OpportunitiesPage.tsx  OverviewPage.tsx  PaperTradingPage.tsx  PositionsPage.tsx  SeasonPage.tsx
polyclaw/: __init__.py  agents.py  arbitrage.py  arena_engine.py  config.py  external_signals.py  features.py  models.py  pipeline.py  polymarket_client.py  scoring.py  selection.py  simulation.py
sdk/python/: pyproject.toml
sdk/python/examples/: 01_momentum.py  02_kelly_sizing.py  03_arbitrage.py  04_llm_driven.py  05_backtest_then_trade.py
sdk/python/polyclaw_sdk/: __init__.py  agent.py  cli.py  client.py  models.py
src/polyclaw/: agents.py  arena_engine.py  cli.py  config.py  simulation.py
src/polyclaw/agents/: __init__.py  portfolio_manager.py  registry.py
src/polyclaw/backtest/: advanced.py  data_loader.py  engine.py  metrics.py  results.py  strategy.py
src/polyclaw/backtest/strategies/: __init__.py  fade_longshot.py  kelly_sized.py  mean_reversion.py  momentum.py  nothing_happens.py  pendulum.py  threshold.py
src/polyclaw/clients/: clob.py  data_api.py  gamma.py  rate_limiter.py
src/polyclaw/ingestion/: backfill_price_ticks.py  market_ingester.py  price_ingester.py  scheduler.py
src/polyclaw/mcp/: __init__.py  server.py
src/polyclaw/models/: market.py  orderbook.py  price.py
src/polyclaw/research/: __init__.py  arbitrage.py  config.py  external_signals.py  models.py  pipeline.py  polymarket_client.py  scoring.py  selection.py
src/polyclaw/seasons/: __init__.py  engine.py
src/polyclaw/storage/: database.py  db.py  repositories.py  schema.py  supabase_db.py
src/polyclaw/trading/: clock.py  factory.py  interface.py  live_trader.py  market_data.py  models.py  paper_trader.py  risk_gate.py  safety.py  service.py
src/polyclaw/web/: app.py  dashboard_service.py  strategy_service.py
src/polyclaw/web/api_v1/: __init__.py  approvals.py  backtest.py  errors.py  leaderboard.py  orders.py  portfolio.py  quota.py  seasons.py
src/polyclaw/web/static/: index.html
src/polyclaw/web/static/app/: index.html
src/polyclaw/web/static/app/assets/: index-1wFw-ngB.js  index-3O4oAbnS.js  index-6iLepFZ2.js  index-B7nOn8eZ.js  index-BZGc5mXg.js  index-BjaD3x1T.js  index-BkrtPjE8.js  index-Bx-W81z5.css  index-BzOE6o2f.js  index-C-k3CQes.css  index-C9LMWh1G.js  index-CFn1-ktD.css  index-CRRRirR0.js  index-CdyZfmDM.js  index-CtSjYdxp.css  index-CxwMg8xG.css  index-D-LV0Fct.css  index-D184E9Q2.css  index-D7vMXems.css  index-DSAw6sBQ.js  index-DfwddfCC.js  index-Dlbrx-WG.css  index-Dwh95FKd.js  index-Evo6QkLN.css  index-OrBugZ6_.js  index-ZWCrxDwv.js  index-w7uSV6KH.js
src/polyclaw/workers/: __init__.py  backtest_queue.py  backtest_worker.py
tests/: conftest.py  test_dashboard_service.py  test_demo_progression.py  test_paper_trader_phase1.py  test_phase2a_price_store.py  test_phase2b_trading_service.py  test_phase2c_backtest_queue.py  test_phase3a_api_auth.py  test_phase4_season_engine.py  test_phase5_advanced_backtest.py  test_phase7_approval_workflow.py  test_post_v2_safety.py  test_security_patches.py  test_slide_claims.py
