[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw"
version = "0.1.0"
description = "Autonomous betting agent for Polymarket"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
polyclaw = "polyclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
