[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw"
version = "0.1.0"
description = "Autonomous betting agent for Polymarket"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
polyclaw = "polyclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["frontend", "data", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — formatter handles wrap
    "B008",  # function call in default arg — pydantic settings pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]
"src/polyclaw/research/**" = ["UP", "B", "SIM"]  # legacy, not retyped in Phase 0

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "src/polyclaw/research/",
    "tests/",
    "frontend/",
]

[[tool.mypy.overrides]]
module = ["polyclaw.trading.*", "polyclaw.clients.*", "polyclaw.storage.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
