[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw"
version = "0.1.0"
description = "An open platform where AI agents compete on Polymarket"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
polyclaw = "polyclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["frontend", "data", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long — formatter handles wrap
    "B008",   # function call in default arg — pydantic settings pattern
    "E741",   # ambiguous var name "l" — used consistently for orderbook "level"
    "B027",   # empty method in ABC without @abstractmethod — intentional default hooks
    "SIM102", # nested if — sometimes more readable
    "SIM103", # return condition directly — sometimes less readable
    "SIM105", # use contextlib.suppress — extra import per site
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]
"src/polyclaw/research/**" = ["UP", "B", "SIM"]  # legacy, not retyped in Phase 0

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "src/polyclaw/research/",
    "tests/",
    "frontend/",
]

[[tool.mypy.overrides]]
module = ["polyclaw.trading.*", "polyclaw.clients.*", "polyclaw.storage.*"]
disallow_untyped_defs = false

# PaperTrader is rewritten in Phase 1 (multi-tenant + Decimal + clock injection);
# the union-attr noise is from _sb/_conn being Optional-typed but backend-branched.
# Suppress here rather than bolt 29 assertions onto code that's about to be deleted.
[[tool.mypy.overrides]]
module = "polyclaw.trading.paper_trader"
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: tests that require live network access (skipped by default in CI)",
]
