[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw-agent-sdk"
version = "0.1.0"
description = "Python SDK for the PolyClaw competitive agent trading platform"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
polyclaw = "polyclaw_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["polyclaw_sdk*"]
